@@ -34,7 +34,7 @@ if /sbin/ifconfig | grep -q "$management_ip"; then
     # The Node has been removed of the replicaset, restart mongodb to re-initiate
     /usr/sbin/jexec mongodb service mongod restart
 
-    # If boostrap has already be done,
+    # If bootstrap has already be done,
     if /usr/local/bin/sudo -u vlt-os /home/vlt-os/env/bin/python /home/vlt-os/vulture_os/manage.py is_node_bootstrapped >/dev/null 2>&1 ; then
         # Update node network ips in Mongo
         /usr/local/bin/sudo -u vlt-os /home/vlt-os/env/bin/python /home/vlt-os/vulture_os/manage.py shell -c "from system.cluster.models import Node ; n = Node.objects.get(name=\"`hostname`\") ; n.management_ip = \"$management_ip\" ; n.internet_ip = \"$internet_ip\" ; n.backends_outgoing_ip = \"$backends_outgoing_ip\" ; n.logom_outgoing_ip = \"$logom_outgoing_ip\" ; n.save()"
